# HDF5Container

./: README.md  pyproject.toml  requirements.txt
src/hdf5_container/: README.md  __init__.py  container.py  utils.py
src/hdf5_container/mixin/: README.md  __init__.py  io.py  protocols.py  special_methods.py
src/hdf5_container/utils/: __init__.py  counter.py  reset.py
tests/: test_container.py
